# gmail-filters

./: .gitignore  audit_filters.py  catchup_domains.py  discover_domains.py  gmail_common.py  merge_domains.py  pyproject.toml  reset_domains.py  test_audit_filters.py  test_catchup_domains.py  test_discover_domains.py  test_merge_domains.py
prompts/: prompt-3.md  prompt-4.md  prompt-5.md
